# MistralHackathon

./: .gitignore  Dockerfile  MCP_INSPECTOR_TEST_GUIDE.md  QDRANT_LOCAL.md  README.md  advanced_chat.py  alpic.yaml  cmdGIT.txt  config.env  config.env.example  config.lambda-optimized.env  config.lambda-ultra-optimized.env  config.lambda.env  config.local.env  config.mcp.env  demo_scenario.py  example.env  launch_chat.py  launch_streamlit.py  launch_with_logs.py  main.py  mainOLD.py  pyproject.toml  requirements.txt  requirements_streamlit.txt  run.py  simple_chat.py  start_full_system.sh  start_qdrant.sh  start_server.py  streamlit_chat.py  test_chat_integration.py  test_cloud_startup.py  test_continuous_summary.py  test_import_timing.py  test_lambda_ultra_fast.py  test_mcp_tools.py  test_network_timing.py  test_qdrant.py  test_qdrant_timing.py  (+2 more)
.cursor/: mcp.json
LEGACY/: mainOLD.py  main_auth.py
doc/: DEVELOPMENT_SUMMARY.md  HACKATHON_SUMMARY.md  archi.md  plan.md  regleHackathon.md
portfolios/: user_user_baptiste_test.json  user_user_henri_test.json  user_user_test.json
qdrant_storage/: raft_state.json
qdrant_storage/collections/collective_memories/0/: replica_state.json
qdrant_storage/collections/collective_memories/0/segments/32ad9186-f474-4f3d-ab3c-fd486434ffcb/payload_index/: LOG  (+2 more)
reminders/: team_team-shared-global_reminders.json  team_test-team-123_reminders.json
src/: config.ts  index.ts
transcripts/: conv_20250914_110603_yo8ja0.txt  conv_20250914_110824_llqtrj.txt  conv_20250914_111234_snu3k5.txt  conv_20250914_111636_f2op4j.txt
webapp/: package-lock.json  package.json  supabase-schema.sql
webapp/src/app/: page.tsx
webapp/src/app/api/auth/verify/: route.ts
webapp/src/app/api/teams/: route.ts
(+13 files in other folders)
