[project]
name = "collective-brain-mcp"
version = "0.1.0"
description = "MCP Server pour système de mémoire collective d'équipe"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Mistral Hackathon Team" }]
keywords = ["mcp", "llm", "collective-memory", "team-brain", "qdrant"]
dependencies = [
    "black>=25.1.0",
    "mcp",
    "pydantic>=2.0.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
