[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server pour bucket de mémoire partagé avec Qdrant"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Mistral Hackathon Team" }]
keywords = ["mcp", "llm", "shared-memory", "qdrant", "vector-db"]
dependencies = [
    "black>=25.1.0",
    "mcp",
    "pydantic>=2.0.0",
    "qdrant-client>=1.7.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
